# scale-system

./: .editorconfig  .gitignore  01-scada-dark.html  02-lab-light.html  03-iiot-modern.html  CLAUDE.md  Dockerfile.api  Dockerfile.web  README.md  package.json  pnpm-lock.yaml  scale-system.html
apps/api/: .env.example  CLAUDE.md  README.md  alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260503_2311_initial_users_refresh_tokens_audit_logs.py  20260503_2351_business_projects_verticals_scales_cups_.py
apps/api/scripts/: seed.py
apps/api/src/scale_api/: __init__.py  main.py
apps/api/src/scale_api/api/: __init__.py  deps.py
apps/api/src/scale_api/core/: __init__.py  config.py  exceptions.py  security.py
apps/api/src/scale_api/db/: __init__.py  session.py
apps/api/src/scale_api/models/: __init__.py  audit_log.py  base.py  cup.py  cup_calibration.py  project.py  record.py  refresh_token.py  scale.py  user.py  vertical.py
apps/api/src/scale_api/repositories/: __init__.py  base.py  cup_repo.py  project_repo.py  record_query_builder.py  record_repo.py  refresh_token_repo.py  scale_repo.py  user_repo.py  vertical_repo.py
apps/api/src/scale_api/schemas/: __init__.py  auth.py  common.py  cup.py  project.py  record.py  scale.py  user.py  vertical.py
apps/api/src/scale_api/serial/: connection_manager.py  protocol_parser.py  pubsub.py  types.py
apps/api/src/scale_api/services/: __init__.py  audit.py  auth_service.py  cup_service.py  pagination.py  project_service.py  record_batch_processor.py  record_calculator.py  record_service.py  (+4 more)
apps/api/tests/: conftest.py  test_config.py  test_health.py  test_security.py  test_seed.py  test_seed_from_excel.py  test_serial_protocol.py
apps/api/tests/api/: conftest.py  test_auth_api.py  test_cups_api.py  test_projects_api.py  test_records_api.py  test_scales_api.py  test_users_api.py  test_verticals_api.py
apps/api/tests/repositories/: test_user_repo.py
apps/api/tests/services/: test_auth_service.py  test_business_services.py  test_pagination.py  test_record_calculator.py  test_record_validator.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
(+199 files in other folders)
