[package]
name = "scale-desktop"
version = "0.1.0"
description = "天平称重系统桌面端"
edition = "2021"
rust-version = "1.80"

[lib]
name = "scale_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-serial = "5.4"
serialport = "4.6"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
